--- a/v001/007_B/assets/css/contactstyle.css
+++ b/v001/007_B/assets/css/contactstyle.css
@@ -22,7 +22,7 @@ body {
 /* Contact Outer Container */
 
 .contactOuterContainer {
-    width: 958px;
+    width: 960px;
 
     padding: 0;
     border: 1px solid #a1a1a1;
