--- a/v001/007_B/assets/css/indexstyle.css
+++ b/v001/007_B/assets/css/indexstyle.css
@@ -22,7 +22,7 @@ body {
 /* About Me Outer Container */
 
 .aboutMeOuterContainer {
-    width: 958px;
+    width: 960px;
 
     padding: 0;
     border: 1px solid #a1a1a1;
